# medium-clone

./: .coverage  .gitignore  README.md  pyproject.toml
articles/: admin.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
articles/management/commands/: populate_db.py
articles/migrations/: 0001_initial.py  0002_tag_article_tags.py  0003_alter_article_author_alter_article_title_and_more.py  0004_alter_article_author.py  0005_delete_comment.py
articles/templates/articles/: article_detail.html  article_list.html  tag_detail.html  tag_list.html
authors/: models.py
authors/migrations/: 0001_initial.py  0002_remove_author_academic_title.py
medium/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 404.html  base.html  footer.html  header.html  pagination.html
